@@ -239,5 +239,18 @@ Like the X Window System, GDK supports 8 modifier keys and 5 mouse buttons.</sum
         <remarks>Do not use.</remarks>
       </Docs>
     </Member>
+    <Member MemberName="None">
+      <MemberSignature Language="C#" Value="None" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.ModifierType</ReturnType>
+      </ReturnValue>
+      <Parameters>
+      </Parameters>
+      <Docs>
+        <summary>No modifiers present.</summary>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
